--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -176,7 +176,7 @@ else
                 <tr>
                     <th>Majetkové vazby společnosti</th>
                     <td>
-                        <a href="/subjektVazby/@Model.ICO">Hierarchický přehled dceřiných společností</a>
+                        <a href="/subjekt/Vazby/@Model.ICO">Hierarchický přehled dceřiných společností</a>
                     </td>
                 </tr>
             }
