--- a/Web.Statu/Views/Manage/CompanyDetail.cshtml
+++ b/Web.Statu/Views/Manage/CompanyDetail.cshtml
@@ -301,7 +301,7 @@
     </div>
 </div>
 <p>
-    <a href="/subjekt2/@Model.ICO">Zpět na firmu</a>
+    <a href="/subjekt/@Model.ICO">Zpět na firmu</a>
 </p>
 
 
