--- a/Web.Statu/Views/Beta/Search.cshtml
+++ b/Web.Statu/Views/Beta/Search.cshtml
@@ -198,6 +198,16 @@
             letter-spacing: 1px;
             transition: .3s;
         }
+        .select2-container--bootstrap .select2-selection--multiple .select2-selection__rendered {
+            display:inline;
+        }
+        .select2-container--bootstrap .select2-selection--multiple .select2-selection__choice__remove {
+            font-size: 17px;
+            margin-left: -5px;
+            padding: 3px;
+            border: none;
+            background: none;
+        }
     </style>
 }
 
