--- a/Web.Statu/Views/Beta/Search.cshtml
+++ b/Web.Statu/Views/Beta/Search.cshtml
@@ -198,8 +198,10 @@
             letter-spacing: 1px;
             transition: .3s;
         }
+        
         .select2-container--bootstrap .select2-selection--multiple .select2-selection__rendered {
-            display:inline;
+            display: inline;
+            white-space:normal;
         }
         .select2-container--bootstrap .select2-selection--multiple .select2-selection__choice__remove {
             font-size: 17px;
