--- a/Web.Statu/App_Code/SuperSearch.cshtml
+++ b/Web.Statu/App_Code/SuperSearch.cshtml
@@ -123,7 +123,7 @@
 <b>@prf</b> }
 else
 {
-<a href="https://www.hlidacstatu.cz/politici?prefix=@prf">@prf</a>}
+<a href="https://www.hlidacstatu.cz/osoby?prefix=@prf">@prf</a>}
         </span>}
                     </div>
                 </div>
