--- a/Web.Statu/Views/Home/Reports/5_SmlouvySPolitiky.cshtml
+++ b/Web.Statu/Views/Home/Reports/5_SmlouvySPolitiky.cshtml
@@ -147,7 +147,7 @@
 
 
 
-@{ ViewBag.MoreHtml = "<p><b>Tady najdete <a href='/Politici'>Seznam politiků a jejich vazby na soukromé firmy</a></b></p>"; }
+@{ ViewBag.MoreHtml = "<p><b>Tady najdete <a href='/Osoby'>Seznam politiků a jejich vazby na soukromé firmy</a></b></p>"; }
 
 
 
