--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -275,7 +275,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <a class="nostyle" href="/Politici">
+                            <a class="nostyle" href="/Osoby">
                                 <b>Čeští politici a jejich vazby na soukromé firmy</b>
                             </a>
                         </td>
