--- a/Web.Statu/Views/Home/Reports/8_TopPrijmyProPolitiky.cshtml
+++ b/Web.Statu/Views/Home/Reports/8_TopPrijmyProPolitiky.cshtml
@@ -10,6 +10,6 @@
 @using HlidacStatu.Lib.Analysis;
 @using HlidacStatu.Lib.Render;
 
-@{ Response.Redirect("/Politici");
+@{ Response.Redirect("/Osoby");
                 Response.End(); }
 
